--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "Amatic SC", cursive;
   overflow: hidden;
 }
 
@@ -173,7 +173,7 @@ a:hover {
   background-size: 200%;
   font-size: 1.2rem;
   color: #fff;
-  font-family: "Poppins", sans-serif;
+  font-family: "Amatic SC", cursive;
   text-transform: uppercase;
   margin: 1rem 0;
   cursor: pointer;
