--- a/css/style.css
+++ b/css/style.css
@@ -6,15 +6,7 @@
 
 body {
   font-family: "Amatic SC", cursive;
-  overflow: hidden;
-}
-
-.wave {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  height: 100%;
-  z-index: -1;
+  /* overflow: hidden; */
 }
 
 .container {
@@ -22,7 +14,7 @@ body {
   height: 100vh;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-gap: 7rem;
+  gap: 7rem;
   padding: 0 2rem;
 }
 
@@ -32,7 +24,7 @@ body {
   align-items: center;
 }
 
-.login-content {
+.login-container {
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -47,32 +39,32 @@ form {
   width: 360px;
 }
 
-.login-content img {
+.login-container img {
   height: 100px;
 }
 
-.login-content h2 {
+.login-container h2 {
   margin: 15px 0;
-  color: #333;
+  color: rgb(90, 230, 255);
   text-transform: uppercase;
-  font-size: 2.9rem;
+  font-size: 3rem;
 }
 
-.login-content .input-div {
+.login-container .input-div {
   position: relative;
   display: grid;
   grid-template-columns: 7% 93%;
   margin: 25px 0;
   padding: 5px 0;
-  border-bottom: 2px solid #d9d9d9;
+  border-bottom: 2px solid rgba(107, 216, 255, 0.548);
 }
 
-.login-content .input-div.one {
+.login-container .input-div.one {
   margin-top: 0;
 }
 
 .i {
-  color: #d9d9d9;
+  color: rgb(44, 179, 252);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -97,27 +89,27 @@ form {
   transition: 0.3s;
 }
 
-.input-div:before,
-.input-div:after {
+.input-div::before,
+.input-div::after {
   content: "";
   position: absolute;
   bottom: -2px;
   width: 0%;
   height: 2px;
-  background-color: #38d39f;
+  background-color: blue;
   transition: 0.4s;
 }
 
-.input-div:before {
+.input-div::before {
   right: 50%;
 }
 
-.input-div:after {
+.input-div::after {
   left: 50%;
 }
 
-.input-div.focus:before,
-.input-div.focus:after {
+.input-div.focus::before,
+.input-div.focus::after {
   width: 50%;
 }
 
@@ -127,7 +119,7 @@ form {
 }
 
 .input-div.focus > .i > i {
-  color: #38d39f;
+  color: skyblue;
 }
 
 .input-div > div > input {
@@ -141,8 +133,8 @@ form {
   background: none;
   padding: 0.5rem 0.7rem;
   font-size: 1.2rem;
-  color: #555;
-  font-family: "poppins", sans-serif;
+  color: aquamarine;
+  font-family: "Amatic SC", cursive;
 }
 
 .input-div.pass {
@@ -154,7 +146,7 @@ a {
   text-align: right;
   text-decoration: none;
   color: #999;
-  font-size: 0.9rem;
+  font-size: 1rem;
   transition: 0.3s;
 }
 
@@ -169,10 +161,15 @@ a:hover {
   border-radius: 25px;
   outline: none;
   border: none;
-  background-image: linear-gradient(to right, #32be8f, #38d39f, #32be8f);
+  background-image: linear-gradient(
+    to right,
+    rgb(7, 78, 154),
+    rgb(34, 132, 237),
+    rgb(34, 132, 237)
+  );
   background-size: 200%;
-  font-size: 1.2rem;
-  color: #fff;
+  font-size: 2rem;
+  color: white;
   font-family: "Amatic SC", cursive;
   text-transform: uppercase;
   margin: 1rem 0;
@@ -181,43 +178,4 @@ a:hover {
 }
 .btn:hover {
   background-position: right;
-}
-
-@media screen and (max-width: 1050px) {
-  .container {
-    grid-gap: 5rem;
-  }
-}
-
-@media screen and (max-width: 1000px) {
-  form {
-    width: 290px;
-  }
-
-  .login-content h2 {
-    font-size: 2.4rem;
-    margin: 8px 0;
-  }
-
-  .img img {
-    width: 400px;
-  }
-}
-
-@media screen and (max-width: 900px) {
-  .container {
-    grid-template-columns: 1fr;
-  }
-
-  .img {
-    display: none;
-  }
-
-  .wave {
-    display: none;
-  }
-
-  .login-content {
-    justify-content: center;
-  }
 }
