--- a/css/style.css
+++ b/css/style.css
@@ -1,181 +1,68 @@
 * {
-  padding: 0;
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
-body {
-  font-family: "Amatic SC", cursive;
-  /* overflow: hidden; */
+body,
+input {
+  font-family: "Poppins", sans-serif;
 }
 
 .container {
-  width: 100vw;
-  height: 100vh;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 7rem;
-  padding: 0 2rem;
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
+  background-color: #fff;
+  overflow: hidden;
 }
 
-.img {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-}
-
-.login-container {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  text-align: center;
-}
-
-.img img {
-  width: 500px;
+.forms-container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
 }
 
 form {
-  width: 360px;
-}
-
-.login-container img {
-  height: 100px;
-}
-
-.login-container h2 {
-  margin: 15px 0;
-  color: rgb(90, 230, 255);
-  text-transform: uppercase;
-  font-size: 3rem;
-}
-
-.login-container .input-div {
-  position: relative;
-  display: grid;
-  grid-template-columns: 7% 93%;
-  margin: 25px 0;
-  padding: 5px 0;
-  border-bottom: 2px solid rgba(107, 216, 255, 0.548);
-}
-
-.login-container .input-div.one {
-  margin-top: 0;
-}
-
-.i {
-  color: rgb(44, 179, 252);
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
-.i i {
-  transition: 0.3s;
+.title {
+  font-size: 2.2rem;
+  color: #444;
+  margin-bottom: 10px;
 }
 
-.input-div > div {
-  position: relative;
-  height: 45px;
-}
-
-.input-div > div > h5 {
-  position: absolute;
-  left: 10px;
-  top: 50%;
-  transform: translateY(-50%);
-  color: #999;
-  font-size: 18px;
-  transition: 0.3s;
-}
-
-.input-div::before,
-.input-div::after {
-  content: "";
-  position: absolute;
-  bottom: -2px;
-  width: 0%;
-  height: 2px;
-  background-color: blue;
-  transition: 0.4s;
-}
-
-.input-div::before {
-  right: 50%;
-}
-
-.input-div::after {
-  left: 50%;
-}
-
-.input-div.focus::before,
-.input-div.focus::after {
-  width: 50%;
-}
-
-.input-div.focus > div > h5 {
-  top: -5px;
-  font-size: 15px;
-}
-
-.input-div.focus > .i > i {
-  color: skyblue;
-}
-
-.input-div > div > input {
-  position: absolute;
-  left: 0;
-  top: 0;
+.input-field {
+  max-width: 380px;
   width: 100%;
-  height: 100%;
-  border: none;
-  outline: none;
-  background: none;
-  padding: 0.5rem 0.7rem;
-  font-size: 1.2rem;
-  color: aquamarine;
-  font-family: "Amatic SC", cursive;
+  height: 55px;
+  background-color: #f0f0f0;
+  margin: 10px 0;
+  border-radius: 55px;
+  display: grid;
+  grid-template-columns: 15% 85%;
+  padding: 0 0.4rem;
 }
 
-.input-div.pass {
-  margin-bottom: 4px;
-}
-
-a {
-  display: block;
-  text-align: right;
-  text-decoration: none;
-  color: #999;
+.input-field i {
+  text-align: center;
+  line-height: 55px;
+  color: #acacac;
   font-size: 1rem;
-  transition: 0.3s;
 }
 
-a:hover {
-  color: #38d39f;
-}
-
-.btn {
-  display: block;
-  width: 100%;
-  height: 50px;
-  border-radius: 25px;
+.input-field input {
+  background: none;
   outline: none;
   border: none;
-  background-image: linear-gradient(
-    to right,
-    rgb(7, 78, 154),
-    rgb(34, 132, 237),
-    rgb(34, 132, 237)
-  );
-  background-size: 200%;
-  font-size: 2rem;
-  color: white;
-  font-family: "Amatic SC", cursive;
-  text-transform: uppercase;
-  margin: 1rem 0;
-  cursor: pointer;
-  transition: 0.5s;
-}
-.btn:hover {
-  background-position: right;
+  line-height: 1;
+  font-weight: 600;
+  font-size: 1rem;
+  color: #333;
 }
